--- a/UNO/Properties/Resources.resx
+++ b/UNO/Properties/Resources.resx
@@ -118,8 +118,14 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Blue_Draw" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\Cards\Blue_Draw.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Black_AddFour" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\Cards\Black_AddFour.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Black_ChangeColor" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\Cards\Black_ChangeColor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Blue_AddTwo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\Cards\Blue_AddTwo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Blue_Eight" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\Cards\Blue_Eight.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -157,8 +163,8 @@
   <data name="Blue_Zero" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\Cards\Blue_Zero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Green_Draw" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\Cards\Green_Draw.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Green_AddTwo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\Cards\Green_AddTwo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Green_Eight" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\Cards\Green_Eight.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -196,8 +202,8 @@
   <data name="Green_Zero" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\Cards\Green_Zero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Red_Draw" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\Cards\Red_Draw.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Red_AddTwo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\Cards\Red_AddTwo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Red_Eight" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\Cards\Red_Eight.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -235,14 +241,8 @@
   <data name="Red_Zero" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\Cards\Red_Zero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Wild" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\Cards\Wild.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Wild_Draw" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\Cards\Wild_Draw.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Yellow_Draw" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\bin\Debug\Cards\Yellow_Draw.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Yellow_AddTwo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\Cards\Yellow_AddTwo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Yellow_Eight" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\Cards\Yellow_Eight.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
