--- a/UNO/Form1.resx
+++ b/UNO/Form1.resx
@@ -141,7 +141,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;btnStart.ZOrder" xml:space="preserve">
-    <value>7</value>
+    <value>8</value>
   </data>
   <data name="pnlTable.Location" type="System.Drawing.Point, System.Drawing">
     <value>1039, 344</value>
@@ -162,7 +162,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;pnlTable.ZOrder" xml:space="preserve">
-    <value>6</value>
+    <value>7</value>
   </data>
   <data name="pnlDeck.Location" type="System.Drawing.Point, System.Drawing">
     <value>398, 344</value>
@@ -183,13 +183,13 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;pnlDeck.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>6</value>
   </data>
   <data name="pnlPlayer1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>398, 12</value>
+    <value>269, 36</value>
   </data>
   <data name="pnlPlayer1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>769, 161</value>
+    <value>353, 102</value>
   </data>
   <data name="pnlPlayer1.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
@@ -204,7 +204,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;pnlPlayer1.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>5</value>
   </data>
   <data name="pnlPlayer2.Location" type="System.Drawing.Point, System.Drawing">
     <value>398, 700</value>
@@ -225,7 +225,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;pnlPlayer2.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>4</value>
   </data>
   <data name="lblMessage.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -255,7 +255,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;lblMessage.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>3</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="NoCurrentCardButton.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
@@ -283,7 +283,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;NoCurrentCardButton.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>2</value>
   </data>
   <data name="comboBox1.Items" xml:space="preserve">
     <value>Red</value>
@@ -316,6 +316,27 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;comboBox1.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
+  <data name="pnlPlayer3.Location" type="System.Drawing.Point, System.Drawing">
+    <value>742, 111</value>
+  </data>
+  <data name="pnlPlayer3.Size" type="System.Drawing.Size, System.Drawing">
+    <value>465, 161</value>
+  </data>
+  <data name="pnlPlayer3.TabIndex" type="System.Int32, mscorlib">
+    <value>10</value>
+  </data>
+  <data name="&gt;&gt;pnlPlayer3.Name" xml:space="preserve">
+    <value>pnlPlayer3</value>
+  </data>
+  <data name="&gt;&gt;pnlPlayer3.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;pnlPlayer3.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;pnlPlayer3.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -12279,9 +12300,6 @@
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAA=
 </value>
-  </data>
-  <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
-    <value>Manual</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>h</value>
